# job-search-chat

./: pyproject.toml
job-search-chat/: chat.py  main.py
